Added id and class attributes to link style sheet changes and HTML elements.

--- a/templates/about-css.html
+++ b/templates/about-css.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>About</title>
+    <link href="/static/css/style.css" rel="stylesheet">
 </head>
 <body>
 <!-- Basic Information -->
     <h1>About Katie Baek</h1>
     <h2>Education</h2>
-    <img src="https://terpconnect.umd.edu/~jbono/bmgt407/images/smith-logo.png" width="267" height="72" alt="Smith logo">
+    <div class="logo">
+    <img src="https://terpconnect.umd.edu/~jbono/bmgt407/images/smith-logo.png" alt="Smith logo">
+    </div>
     <p>Student at the <strong>University of Maryland</strong></p>
     <p>Majors: <em>Marketing</em> and <em>Information Systems</em></p>
 <!-- table requirement -->
@@ -40,6 +43,7 @@
     <p>My favorite color is purple</p>
     <p>I recently bought a <em>film camera!</em></p>
 <!-- list, unordered and ordered -->
+    <div class="list">
     <p>A few artists I have seen live:</p>
     <ul>
         <li>COIN</li>
@@ -48,7 +52,9 @@
         <li>The 1975</li>
         <li>SZA</li>
     </ul>
+    </div>
 
+    <div class="list">
     <p>My concert lineup for 2023 so far:</p>
     <ol>
         <li>Waterparks</li>
@@ -56,10 +62,16 @@
         <li>LANY</li>
         <li>Head in the Clouds Festival</li>
     </ol>
+    </div>
 
 <!-- two hyperlinks-->
     <p>I love shopping at <a href="https://www.urbanoutfitters.com/" target="_blank">Urban Outfitters</a></p>
     <p>I love <a href="https://www.instagram.com/">Instagram</a>!</p>
+
+<!-- additional paragraph for CSS module-->
+    <h2>More About Me</h2>
+    <p id="special-one">I worked as a "merch girl" for my friend Zeph, who opened for the band, Waterparks, on tour.
+    Currently, I work at Mad Chef Kitchen and Bar and Anthropologie on the weekends.</p>
 
 </body>
 </html>
