added message with hyperlink with message and created a route that directs admin and manager only to training

--- a/templates/training.html
+++ b/templates/training.html
@@ -8,5 +8,12 @@
     Training
 {% endblock %}
 
+{% block page_content %}
+Welcome to your training for the TerpSys Student Information Systems.
+Training materials are currently under construction, but will be created very soon.
+Please check back soon or email Katie at <a href="mailto:kbaek1@terpmail.umd.edu">kbaek1@terpmail.umd.edu</a>,
+if you wish to be placed on the waiting list.
+{% endblock %}
+
 
 
